--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <section>
   <section1>
-    <p> Being kind to yourself is sounds easy in theory but is difficult in
+    <p> Being kind to yourself sounds easy in theory but is difficult in
       practice. There are so many ways to show yourself you care.
       Try one of these tried and tested methods
        that’ll give you an instant dose of self-love.</p>
