--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link href="icon.png" rel="icon" type="image/png"/>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
 </head>
 
 <body>
-  <h1> Self-Care Sunday </h1>
+  <h1> Self-Care Sunday <i class="em em-sparkling_heart"></i> </h1>
 
   <h2>// Spend some time on yourself //</h2>
 
@@ -22,7 +23,7 @@
       practice. There are so many ways to show yourself you care.
       Try one of these tried and tested methods
        that’ll give you an instant dose of self-love.</p>
-    <button onclick="newWord()"> FEEL GOOD </button>
+    <button onclick="newWord()">FEEL GOOD </button>
   </section1>
 
   <section2>
