--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h1> Self-Care Sunday <i class="em em-sparkling_heart"></i> </h1>
+  <h1> Self-Care Sunday <i class="em em-cupid"></i> </h1>
 
   <h2>// Spend some time on yourself //</h2>
 
