--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
   <h1> Self-Care Sunday <i class="em em-cupid"></i> </h1>
 
-  <h2>// Spend some time on yourself //</h2>
-
 <section>
-  <section1>
+    <section1>
     <p> Being kind to yourself sounds easy in theory but is difficult in
       practice. There are so many ways to show yourself you care.
       Try one of these tried and tested methods
        that’ll give you an instant dose of self-love.</p>
+    <div id="bar"> </div>
+    <h2>Spend some time on yourself</h2>
     <button onclick="newWord()">FEEL GOOD </button>
   </section1>
 
@@ -31,12 +31,10 @@
   </section2>
 </section>
 
-  <div id="tweet">
-  <a href="https://twitter.com/intent/tweet?text=Spend%20some%20time%20on%20yourself"
-  data-size="large"> Tweet</a>
 </body>
 
 <footer>
+  <p> Check out the code <a href="https://github.com/polk54/SelfCareSunday">here</a></p>
   <p> Inspired by <a href="https://www.girlboss.com/wellness/self-care-free-ideas-list">GirlBoss</a> </p>
 </footer>
 </div>
